# CGMath-Demo

./: .gitignore  CMakeLists.txt  README.md
include/: render.hpp  vec2.hpp  vec3.hpp
src/: main.cpp
src/rendering/: render.cpp
src/vector-math/: vec2.cpp  vec3.cpp
